Fix overflow order history

--- a/src/css/orderrequests.css
+++ b/src/css/orderrequests.css
@@ -153,7 +153,7 @@ body{
 		font-size: 2rem;
 		vertical-align: middle;
 		color: black;
-		width: 333%;
+		width: 100%;
 		display: block;
 		text-align: left;
 		/*text-transform: uppercase;*/
